# RustEcom

./: .gitignore  Cargo.toml  RUN.md  test_payload.json
frontend/: frontend.txt.html
migrations/: 0001_create_ecommerce_schema.sql  0002_add_product_images.sql  0003_create_discounts.sql
src/: main.rs  schema.rs
static/: app.js  index.html  style.css
